--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         git init
         git config --local user.email "github-action@users.noreply.github.com"
         git config --local user.name "GitHub Action"
-        git remote add origin https://github-action:$GITHUB_TOKEN@github.com/hosxy/pkg.git
+        git remote add origin https://github-action:$GITHUB_TOKEN@github.com/hosxy/pkg-repo-data.git
         git branch -M data
         cp ../repo.db ../repo.db.sha256sum .
         git add .
